# mod_authnz_tailscale

./: .gitignore  COPYING  ChangeLog  INSTALL  Makefile.am  README.md  configure.ac
src/: Makefile.am  mod_authnz_tailscale.c  mod_authnz_tailscale.h.in  ts_whois.c  ts_whois.h
test/: Makefile.am
test/modules/authnz_tailscale/: conftest.py  env.py  faker.py  test_001_authn.py  test_002_authz.py  test_002_authz_user.py  test_003_authz_node.py  test_004_authz_tailnet.py
test/pyhttpd/htdocs/cgi/: hello.py
